Changes for Perl Application Development and Refactoring Environment
NOTE: Do not "tidy" or change the indenting here, or we break svn annotate

0.69 To Be Released
    - Landed ConfigSync branch, but not activating it for now (MATTP)
    - Fixed test failure in t/93-padre-filename-win.t under win32 (SEWI)

0.68 2010.07.28 - Unstable - Post Birthday Hackathon Weekend
    - Fixed rare bug in t/23_task_chain.t (CHORNY)
    - Refactored the Action subsystem into a simpler model. The old layout
      artificially broke it up based on menu structure. The new layout
      also makes it simpler to do further refactorings (ADAMK)
    - Removed half the usages of Wx::Perl::Dialog (ADAMK)
    - Use a hyphen to a separate the current vs native names of the languages
      in the View menu, as the bracing looked weird with the bracing of some
      of the languages themselves (ADAMK, ZENOG)
    - Don't show a additional translated string for the language that is
      currently active (ADAMK, ZENOG)
    - When the advanced setting "feature_fontsize" is disabled, Padre will
      remove the Font Size menu, disable Ctrl-+ and Ctrl--, and (most
      importantly) will not change the font size in an editor on
      Ctrl-Scroll (ADAMK)
    - Added integration with the PPI::Transform API for modifying Perl
      documents, so the transform objects can modify Padre documents (ADAMK)
    - Added the "Move POD to __END__" refactoring that lets you extract all
      the POD scattered through a document, merge it together, and move it
      to the bottom of the file after an __END__ statement (ADAMK)
    - If the Open Selection expression only matches one file, immediately
      open it without showing a pointless dialog (ADAMK)
    - Removed Wx::Perl::Dialog by inlining it into Padre::Wx::Dialog, this
      will remove the need to import ':everything', saving 50-100k (ADAMK)
    - Actions now only need to be declared once, and are all declared in one
      place in advance (ADAMK)