@@ -4,6 +4,7 @@ NOTE: Do not "tidy" or change the indenting here, or we break svn annotate
 0.69 To Be Released
     - Landed ConfigSync branch, but not activating it for now (MATTP)
     - Fixed test failure in t/93-padre-filename-win.t under win32 (SEWI)
+    - Devel plugin now has the option to dump the Task Manager (GARU)
 
 0.68 2010.07.28 - Unstable - Post Birthday Hackathon Weekend
     - Fixed rare bug in t/23_task_chain.t (CHORNY)
